--- a/.github/workflows/backendCICD.yml
+++ b/.github/workflows/backendCICD.yml
@@ -7,6 +7,8 @@ jobs:
     steps:
     - name: logging pwd
       run: pwd
+    - name: logging directory list
+      run: ls
     - name: Todo Test Cases
       run: python manage.py test | cd backend
     - name: logging test
