--- a/.github/workflows/backendCICD.yml
+++ b/.github/workflows/backendCICD.yml
@@ -9,6 +9,11 @@ jobs:
       run: pwd
     - name: logging directory list
       run: ls -l
+
+    - name: Install Dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
     - name: Todo Test Cases
       run: python manage.py test | cd backend
     - name: logging test
