--- a/.github/workflows/backendCICD.yml
+++ b/.github/workflows/backendCICD.yml
@@ -5,6 +5,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v4
     - name: logging pwd
       run: pwd
     - name: logging directory list
